--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/cqrs": "^8.0.2",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "pg": "^8.7.3",
     "rimraf": "^3.0.2",
@@ -34,7 +35,6 @@
     "typeorm-transactional-cls-hooked": "^0.1.21"
   },
   "devDependencies": {
-    "reflect-metadata": "^0.1.13",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -49,6 +49,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
+    "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
